--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@angular/core": "14.2.5",
     "@angular/forms": "14.2.5",
     "@angular/localize": "14.2.5",
+    "@angular/material": "^7.0.0",
     "@angular/platform-browser": "14.2.5",
     "@angular/platform-browser-dynamic": "14.2.5",
     "@angular/router": "14.2.5",
